	PR tree-optimization/59523 	* tree-vectorizer.c (fold_loop_vectorized_call): Call update_stmt 	on updated stmts.

* gcc.dg/pr59523.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206069 138bc75d-0d04-0410-961f-82ee72b054a4